<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    android:padding="@dimen/material_layout_keylines_screen_edge_margin">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_weight="1">

        <com.example.kvoththebloodless.fantv.DynamicHeightNetworkImageView
            android:id="@+id/overlay_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:paddingBottom="5dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom|center"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/rating"
                android:paddingEnd="50dp"
                android:paddingLeft="0dp"
                android:paddingRight="50dp"
                android:paddingStart="0dp"
                android:src="@drawable/ic_grade_white_24dp" />

            <TextView
                android:id="@+id/rating1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:text="@string/_7_8"
                android:textAppearance="@style/caption"
                android:textColor="@color/colorAccent"

                android:textSize="18sp" />
        </FrameLayout>

    </FrameLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"></View>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/plot"
            android:src="@drawable/ic_comment_black_24dp" />

        <TextView
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1"
            android:maxLines="7"
            android:paddingBottom="10dp"
            android:paddingEnd="0dp"
            android:paddingLeft="30dp"
            android:paddingRight="0dp"
            android:paddingStart="30dp"
            android:textAppearance="@style/body" />

        <Button
            android:id="@+id/readmore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#fff"
            android:padding="0dp"
            android:text="Read More."
            android:textColor="#000"
            android:textSize="13sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/air_date"
                android:src="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/airdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/caption"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/runtime"
                android:src="@drawable/ic_watch_later_black_24dp" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/caption"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/country_of_origin"
                android:src="@drawable/ic_language_black_24dp" />

            <TextView
                android:id="@+id/lang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/caption"
                android:textSize="12sp" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>